assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Chewy&family=Chilanka&display=swap');
body{
    background-color: #a1d9f7;
    color: #001011; 
    font-family: 'Chilanka', sans-serif;
}
h1, .navbar-brand{
    font-family: 'Chewy', sans-serif;
}

.nav-color{
    background-color: #009bf5;
}
.jb-bg{
    background-color: #d81159;
    margin-bottom: 0;
    
}
.btn{
    background-color: #009bf5;
}
footer{
    width: 100%;
    height: auto;
    position: relative;
    background-color:#d81159 ;
   
}
.icons{
    float: right;
    font-size: 20px;
}
#astro{
    animation: slideInRight; /* referring directly to the animation's @keyframe declaration */
  animation-duration: 2s;
}
.options{
    background-color: #f75c03;
    width: 150px;
    height: 60px;
    color: #ffff3f;
    margin-right: auto;
    margin-left: auto;
    padding: 20px;
    display: inline;

    border-radius: 10%;
    clear: both;
    animation: slideInRight; /* referring directly to the animation's @keyframe declaration */
  animation-duration: 2s;
}
#qImages > img{
    
    display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 5%;
  width: 50%;
  animation: slideInLeft; /* referring directly to the animation's @keyframe declaration */
  animation-duration: 2s;

}
#solution{
    margin: 30px;
}
.btn{
    animation: slideInRight; /* referring directly to the animation's @keyframe declaration */
  animation-duration: 2s;
}
@media only screen and (min-width: 577px) and (max-width:992px) {
     footer{
        font-family: 'Chewy', san-serif;
        font-size: 30px;
    }
}

@media only screen and (max-width: 576px) {
    footer{
        font-family: 'Chewy', san-serif;
        font-size: 30px;
        margin-top: 10px;
    }
    .icons{
        display: inline-flex;
        flex: 100%;
        line-height: 30px;
        word-spacing: 60px;
    }
    .solutions{
       height: 40px;
    width: 80px;
    font-size: 15px;
   
    padding: 0
    }
    .btn{
        display: block;
    }
}

